--- a/css/style.css
+++ b/css/style.css
@@ -205,11 +205,26 @@ header {
 }
 
 .hero-img {
-    width: 900px; /* perbesar gambar */
-    max-width: none;
-    height: auto;
-    object-fit: contain;
-    opacity: 0.9;
+    width: 70%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center; /* atau center center */
+    opacity: 0.8;
+}
+
+.hero {
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+@media (max-width: 800px) {
+    .hero {
+        padding: 20px 20px;
+    }
+
+    .hero-img {
+        object-position: top;
+    }
 }
 
 @media (max-width: 992px) {
