--- a/css/style.css
+++ b/css/style.css
@@ -212,21 +212,6 @@ header {
     opacity: 0.8;
 }
 
-.hero {
-    min-height: 100vh;
-    overflow: hidden;
-}
-
-@media (max-width: 800px) {
-    .hero {
-        padding: 20px 20px;
-    }
-
-    .hero-img {
-        object-position: top;
-    }
-}
-
 @media (max-width: 992px) {
     .hero {
         flex-direction: column;
@@ -272,6 +257,10 @@ header {
     .hero-img {
         width: 100%;
         opacity: 0.4;
+        object-fit: contain;
+        object-position: center top;
+        height: auto;         /* Pastikan tinggi menyesuaikan gambar */
+        max-height: 80vh;
     }
 
     .hero-content button {
