--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,7 @@ footer i {
   right: 12px;
   font-size: 24px;
   font-weight: bold;
-  color: #d35400;
+  color: #231f1d;
   background-color: transparent;
   border: none;
   cursor: pointer;
